codex-rs/core/tests/suite/snapshots/all__suite__model_visible_layout__model_visible_layout_cwd_change_does_not_refresh_agents.snap
---
source: core/tests/suite/model_visible_layout.rs
assertion_line: 372
expression: "format_labeled_requests_snapshot(\"Second turn changes cwd to a directory with different AGENTS.md; current behavior does not emit refreshed AGENTS instructions.\",\n&[(\"First Request (agents_one)\", &requests[0]),\n(\"Second Request (agents_two cwd)\", &requests[1]),])"
---
Scenario: Second turn changes cwd to a directory with different AGENTS.md; current behavior does not emit refreshed AGENTS instructions.

## First Request (agents_one)
00:message/developer:<SKILLS_INSTRUCTIONS>
01:message/user:first turn in agents_one

## Second Request (agents_two cwd)
00:message/developer:<SKILLS_INSTRUCTIONS>
01:message/user:first turn in agents_one
02:message/assistant:turn one complete
03:message/user:second turn in agents_two
