codex-rs/core/tests/suite/snapshots/all__suite__model_visible_layout__model_visible_layout_turn_overrides.snap
---
source: core/tests/suite/model_visible_layout.rs
assertion_line: 239
expression: "format_labeled_requests_snapshot(\"Second turn changes cwd, approval policy, and personality while keeping model constant.\",\n&[(\"First Request (Baseline)\", &requests[0]),\n(\"Second Request (Turn Overrides)\", &requests[1]),])"
---
Scenario: Second turn changes cwd, approval policy, and personality while keeping model constant.

## First Request (Baseline)
00:message/developer:<SKILLS_INSTRUCTIONS>
01:message/user:first turn

## Second Request (Turn Overrides)
00:message/developer:<SKILLS_INSTRUCTIONS>
01:message/user:first turn
02:message/assistant:turn one complete
03:message/user:second turn with context updates
